// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Select /> renders a Select with a caption correctly 1`] = `
.emotion-4 {
  position: relative;
}

.emotion-4:after {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  bottom: 0;
  color: #989A9C;
  content: '\\f037';
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-family: Arbor;
  font-size: 1rem;
  pointer-events: none;
  position: absolute;
  right: 0.5rem;
  top: 0;
}

.emotion-2 {
  border-radius: 3px;
  border: 1px solid #E0E1E2;
  box-sizing: border-box;
  color: #25272D;
  font-family: Motiva Sans;
  font-size: 0.875rem;
  line-height: 1.25;
  margin: 0.25rem 0;
  padding: 0.5rem;
  width: 100%;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: #FFFFFF;
}

@media (max-width:768px) {
  .emotion-2 {
    font-size: 1rem;
  }
}

.emotion-2::-webkit-input-placeholder {
  color: #989A9C;
}

.emotion-2::-moz-placeholder {
  color: #989A9C;
}

.emotion-2:-ms-input-placeholder {
  color: #989A9C;
}

.emotion-2::placeholder {
  color: #989A9C;
}

.emotion-2:focus {
  border: 1px solid #081D17;
  box-shadow: 0 0 8px rgba(182,239,208,0.1);
  outline: none;
}

.emotion-2:disabled {
  background: #F2F2F2;
}

.emotion-2:required {
  box-shadow: none;
}

.emotion-2:-moz-focusring {
  color: transparent;
  text-shadow: 0 0 0 #000;
}

.emotion-8 {
  margin-bottom: 0.5rem;
}

.emotion-0 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-6 {
  font-family: Motiva Sans;
  color: #D93838;
  line-height: 1.5;
  font-size: 0.8125rem;
}

<div
  className="emotion-8 emotion-9"
>
  <div
    className="emotion-0 emotion-1"
  >
    
  </div>
  <div
    className="emotion-4 emotion-5"
  >
    <select
      className="emotion-2 emotion-3"
      id="example"
    >
      <option>
        Some Option
      </option>
    </select>
  </div>
  <span
    className="emotion-6 emotion-7"
    color="palette.red.default"
  >
    I am a caption
  </span>
</div>
`;

exports[`<Select /> renders a Select with a label correctly 1`] = `
.emotion-8 {
  position: relative;
}

.emotion-8:after {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  bottom: 0;
  color: #989A9C;
  content: '\\f037';
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-family: Arbor;
  font-size: 1rem;
  pointer-events: none;
  position: absolute;
  right: 0.5rem;
  top: 0;
}

.emotion-6 {
  border-radius: 3px;
  border: 1px solid #E0E1E2;
  box-sizing: border-box;
  color: #25272D;
  font-family: Motiva Sans;
  font-size: 0.875rem;
  line-height: 1.25;
  margin: 0.25rem 0;
  padding: 0.5rem;
  width: 100%;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: #FFFFFF;
}

@media (max-width:768px) {
  .emotion-6 {
    font-size: 1rem;
  }
}

.emotion-6::-webkit-input-placeholder {
  color: #989A9C;
}

.emotion-6::-moz-placeholder {
  color: #989A9C;
}

.emotion-6:-ms-input-placeholder {
  color: #989A9C;
}

.emotion-6::placeholder {
  color: #989A9C;
}

.emotion-6:focus {
  border: 1px solid #081D17;
  box-shadow: 0 0 8px rgba(182,239,208,0.1);
  outline: none;
}

.emotion-6:disabled {
  background: #F2F2F2;
}

.emotion-6:required {
  box-shadow: none;
}

.emotion-6:-moz-focusring {
  color: transparent;
  text-shadow: 0 0 0 #000;
}

.emotion-4 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-10 {
  margin-bottom: 1rem;
}

.emotion-2 {
  font-family: Motiva Sans;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-0 {
  color: #5B5D61;
  display: block;
  font-family: Motiva Sans;
  font-size: 0.875rem;
  line-height: 1.5;
}

<div
  className="emotion-10 emotion-11"
>
  <div
    className="emotion-4 emotion-3"
  >
    <div
      className="emotion-2 emotion-3"
    >
      <label
        className="emotion-0 emotion-1"
        htmlFor="example"
      >
        My Select
      </label>
    </div>
  </div>
  <div
    className="emotion-8 emotion-9"
  >
    <select
      className="emotion-6 emotion-7"
      id="example"
    >
      <option>
        Some Option
      </option>
    </select>
  </div>
  
</div>
`;

exports[`<Select /> renders a Select with a labelAside correctly 1`] = `
.emotion-2 {
  position: relative;
}

.emotion-2:after {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  bottom: 0;
  color: #989A9C;
  content: '\\f037';
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-family: Arbor;
  font-size: 1rem;
  pointer-events: none;
  position: absolute;
  right: 0.5rem;
  top: 0;
}

.emotion-0 {
  border-radius: 3px;
  border: 1px solid #E0E1E2;
  box-sizing: border-box;
  color: #25272D;
  font-family: Motiva Sans;
  font-size: 0.875rem;
  line-height: 1.25;
  margin: 0.25rem 0;
  padding: 0.5rem;
  width: 100%;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: #FFFFFF;
}

@media (max-width:768px) {
  .emotion-0 {
    font-size: 1rem;
  }
}

.emotion-0::-webkit-input-placeholder {
  color: #989A9C;
}

.emotion-0::-moz-placeholder {
  color: #989A9C;
}

.emotion-0:-ms-input-placeholder {
  color: #989A9C;
}

.emotion-0::placeholder {
  color: #989A9C;
}

.emotion-0:focus {
  border: 1px solid #081D17;
  box-shadow: 0 0 8px rgba(182,239,208,0.1);
  outline: none;
}

.emotion-0:disabled {
  background: #F2F2F2;
}

.emotion-0:required {
  box-shadow: none;
}

.emotion-0:-moz-focusring {
  color: transparent;
  text-shadow: 0 0 0 #000;
}

<div
  className="emotion-2 emotion-3"
>
  <select
    className="emotion-0 emotion-1"
    id="example"
  >
    <option>
      Some Option
    </option>
  </select>
</div>
`;

exports[`<Select /> renders a large Select correctly 1`] = `
.emotion-2 {
  position: relative;
}

.emotion-2:after {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  bottom: 0;
  color: #989A9C;
  content: '\\f037';
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-family: Arbor;
  font-size: 1rem;
  pointer-events: none;
  position: absolute;
  right: 0.5rem;
  top: 0;
}

.emotion-0 {
  border-radius: 3px;
  border: 1px solid #E0E1E2;
  box-sizing: border-box;
  color: #25272D;
  font-family: Motiva Sans;
  font-size: 0.875rem;
  line-height: 1.25;
  margin: 0.25rem 0;
  padding: 0.5rem;
  width: 100%;
  padding: 0.75rem 0.5rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: #FFFFFF;
}

@media (max-width:768px) {
  .emotion-0 {
    font-size: 1rem;
  }
}

.emotion-0::-webkit-input-placeholder {
  color: #989A9C;
}

.emotion-0::-moz-placeholder {
  color: #989A9C;
}

.emotion-0:-ms-input-placeholder {
  color: #989A9C;
}

.emotion-0::placeholder {
  color: #989A9C;
}

.emotion-0:focus {
  border: 1px solid #081D17;
  box-shadow: 0 0 8px rgba(182,239,208,0.1);
  outline: none;
}

.emotion-0:disabled {
  background: #F2F2F2;
}

.emotion-0:required {
  box-shadow: none;
}

.emotion-0:-moz-focusring {
  color: transparent;
  text-shadow: 0 0 0 #000;
}

<div
  className="emotion-2 emotion-3"
>
  <select
    className="emotion-0 emotion-1"
    id="example"
  >
    <option>
      Some Option
    </option>
  </select>
</div>
`;

exports[`<Select /> renders an Select correctly 1`] = `
.emotion-2 {
  position: relative;
}

.emotion-2:after {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  bottom: 0;
  color: #989A9C;
  content: '\\f037';
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-family: Arbor;
  font-size: 1rem;
  pointer-events: none;
  position: absolute;
  right: 0.5rem;
  top: 0;
}

.emotion-0 {
  border-radius: 3px;
  border: 1px solid #E0E1E2;
  box-sizing: border-box;
  color: #25272D;
  font-family: Motiva Sans;
  font-size: 0.875rem;
  line-height: 1.25;
  margin: 0.25rem 0;
  padding: 0.5rem;
  width: 100%;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: #FFFFFF;
}

@media (max-width:768px) {
  .emotion-0 {
    font-size: 1rem;
  }
}

.emotion-0::-webkit-input-placeholder {
  color: #989A9C;
}

.emotion-0::-moz-placeholder {
  color: #989A9C;
}

.emotion-0:-ms-input-placeholder {
  color: #989A9C;
}

.emotion-0::placeholder {
  color: #989A9C;
}

.emotion-0:focus {
  border: 1px solid #081D17;
  box-shadow: 0 0 8px rgba(182,239,208,0.1);
  outline: none;
}

.emotion-0:disabled {
  background: #F2F2F2;
}

.emotion-0:required {
  box-shadow: none;
}

.emotion-0:-moz-focusring {
  color: transparent;
  text-shadow: 0 0 0 #000;
}

<div
  className="emotion-2 emotion-3"
>
  <select
    className="emotion-0 emotion-1"
    id="example"
  >
    <option>
      Some Option
    </option>
  </select>
</div>
`;
